--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -27,5 +28,4 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "vite": "^5.3.1"
   }
-  
 }
