--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-spinners": "^0.14.1",
     "sass": "^1.77.6"
   },
   "devDependencies": {
